@@ -1,6 +1,8 @@
 Revision history for FCGI-Buffer
 
 0.09
+	Begin code to replace dynamic links to static links
+		(Highly experimental, and unconfigurable)
 	Honour the order of HTTP_ACCEPT_ENCODING
 	Improved handling of HTTP status
 	init() returns the object itself so you can now chain messages
